--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DaleNes</title>
+    <title>Nowty</title>
 </head>
 <body>
     <header>
-        DaleNes
+        Nowty
     </header>
 
     <section>
@@ -18,7 +18,7 @@
     </section>
 
     <footer>
-        DaleNes 2023
+        Nowty 2023
     </footer>
 </body>
 </html>
